# NixTools

./: .gitignore  CMakeLists.txt
include/: debugger.h  directory.h  system.h
src/: debugger.cpp  directory.cpp  system.cpp
